WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120008
[GTK][ARM] javascriptcore compilation is broken
https://bugs.webkit.org/show_bug.cgi?id=120008
Summary
[GTK][ARM] javascriptcore compilation is broken
Víctor M. Jáquez L.
Reported
2013-08-19 06:07:46 PDT
CXX Source/JavaScriptCore/dfg/libjavascriptcoregtk_3_0_la-DFGDesiredTransitions.lo CXX Source/JavaScriptCore/dfg/libjavascriptcoregtk_3_0_la-DFGDesiredWeakReferences.lo distcc[26901] ERROR: compile /media/endless/__/home/endless/.ccache/tmp/DFGDesired.tmp.endless.26898.ii on localhost failed ../../Source/JavaScriptCore/dfg/DFGDesiredTransitions.cpp: In member function 'void JSC::DFG::DesiredTransition::reallyAdd(JSC::VM&, JSC::DFG::CommonData*)': ../../Source/JavaScriptCore/dfg/DFGDesiredTransitions.cpp:44:11: error: invalid use of incomplete type 'class JSC::DFG::CommonData' In file included from ../../Source/JavaScriptCore/dfg/DFGDesiredTransitions.cpp:27:0: ../../Source/JavaScriptCore/dfg/DFGDesiredTransitions.h:40:7: error: forward declaration of 'class JSC::DFG::CommonData' ../../Source/JavaScriptCore/dfg/DFGDesiredTransitions.cpp:48:43: error: 'WeakReferenceTransition' was not declared in this scope make[1]: *** [Source/JavaScriptCore/dfg/libjavascriptcoregtk_3_0_la-DFGDesiredTransitions.lo] Error 1 make[1]: *** Waiting for unfinished jobs.... In file included from DerivedSources/WebCore/JSInternals.cpp:56:0: ../../Source/WebCore/css/StylePropertySet.h: In member function ‘const WebCore::StylePropertyMetadata* WebCore::ImmutableStylePropertySet::metadataArray() const’: ../../Source/WebCore/css/StylePropertySet.h:179:142: warning: cast from ‘const char*’ to ‘const WebCore::StylePropertyMetadata*’ increases required alignment of target type [-Wcast-align] distcc[26923] ERROR: compile /media/endless/__/home/endless/.ccache/tmp/DFGDesired.tmp.endless.26920.ii on 192.168.10.48/4 failed distcc[26923] (dcc_build_somewhere) Warning: remote compilation of '/media/endless/__/home/endless/.ccache/tmp/DFGDesired.tmp.endless.26920.ii' failed, retrying locally distcc[26923] Warning: failed to distribute /media/endless/__/home/endless/.ccache/tmp/DFGDesired.tmp.endless.26920.ii to 192.168.10.48/4, running locally instead distcc[26923] ERROR: compile /media/endless/__/home/endless/.ccache/tmp/DFGDesired.tmp.endless.26920.ii on localhost failed ../../Source/JavaScriptCore/dfg/DFGDesiredWeakReferences.cpp: In member function 'void JSC::DFG::DesiredWeakReferences::reallyAdd(JSC::VM&, JSC::DFG::CommonData*)': ../../Source/JavaScriptCore/dfg/DFGDesiredWeakReferences.cpp:52:15: error: invalid use of incomplete type 'class JSC::DFG::CommonData' In file included from ../../Source/JavaScriptCore/dfg/DFGDesiredWeakReferences.cpp:27:0: ../../Source/JavaScriptCore/dfg/DFGDesiredWeakReferences.h:39:7: error: forward declaration of 'class JSC::DFG::CommonData' make[1]: *** [Source/JavaScriptCore/dfg/libjavascriptcoregtk_3_0_la-DFGDesiredWeakReferences.lo] Error 1 make[1]: Leaving directory `/media/endless/__/home/endless/src/WebKit/WebKitBuild/Release' make: *** [all] Error 2
Attachments
Patch
(4.49 KB, patch)
2013-08-19 10:02 PDT
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Víctor M. Jáquez L.
Comment 1
2013-08-19 10:02:14 PDT
Created
attachment 209096
[details]
Patch
Oliver Hunt
Comment 2
2013-08-19 10:08:57 PDT
Comment on
attachment 209096
[details]
Patch Thanks!
WebKit Commit Bot
Comment 3
2013-08-19 11:26:57 PDT
Comment on
attachment 209096
[details]
Patch Clearing flags on attachment: 209096 Committed
r154287
: <
http://trac.webkit.org/changeset/154287
>
WebKit Commit Bot
Comment 4
2013-08-19 11:26:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug