<https://webkit.org/b/120008> [GTK][ARM] javascriptcore compilation is broken

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2013-08-19
Reviewed by Oliver Hunt.

Guard the compilation of these files only if DFG_JIT is enabled.

* dfg/DFGDesiredTransitions.cpp:
* dfg/DFGDesiredTransitions.h:
* dfg/DFGDesiredWeakReferences.cpp:
* dfg/DFGDesiredWeakReferences.h:
* dfg/DFGDesiredWriteBarriers.cpp:
* dfg/DFGDesiredWriteBarriers.h:

Canonical link: https://commits.webkit.org/137954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154287 268f45cc-cd09-0410-ab3c-d52691b4dbfc