Source/JavaScriptCore/dfg/DFGDesiredTransitions.h
@@ -28,6 +28,8 @@
 
 #include <wtf/Vector.h>
 
+#if ENABLE(DFG_JIT)
+
 namespace JSC { 
 
 class CodeBlock;
@@ -65,5 +67,7 @@ private:
 };
 
 } } // namespace JSC::DFG
+
+#endif // ENABLE(DFG_JIT)
 
 #endif // DFGDesiredTransitions_h
